# harbour-credentials

./: .flake8  .gitignore  .gitmodules  .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  cliff.toml  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: cd-docs.yml  cd-release.yml  ci.yml
docs/: README.md  architecture.md  contributing.md  did-identity-system.md  index.md
docs/api/python/: index.md
docs/api/typescript/: index.md
docs/cli/: index.md
docs/decisions/: 001-vc-securing-mechanism.md  002-dual-runtime-architecture.md  003-canonicalization.md  004-key-management.md  005-did-ethr-migration.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: credential-lifecycle.md  delegated-signing.md  evidence.md
docs/schema/: credential-model.md
docs/specs/: delegation-challenge-encoding.md  did-method-evaluation.md
docs/specs/references/: README.md  csc-data-model.md  did-core.md  did-ethr-method-spec.md  did-web-method.txt  did-webs-spec.md  gx-architecture-document-25.11.md  gx-compliance-document-25.10.md  keri-draft.md  oid4vp-1.0.md  oid4vp-1.0.txt  sd-jwt-rfc9901.md  sd-jwt-vc.md  subresource-integrity.md  token-status-list-draft-19.txt  token-status-list.md  vc-data-model-2.0.md  vc-jose-cose.md
examples/: README.md  consent-vp.json  credential-with-evidence.json  credential-with-nested-evidence.json  delegated-signing-receipt.json  legal-person-credential.json  natural-person-credential.json  service-offering-credential.json  trust-anchor-credential.json
examples/did-ethr/: README.md  harbour-signing-service.did.json  harbour-trust-anchor.did.json  legal-person-0aa6d7ea-27ef-416f-abf8-9cb634884e66.did.json  natural-person-550e8400-e29b-41d4-a716-446655440000.did.json
examples/did-webs/: README.md  harbour-signing-service.did.json  harbour-trust-anchor.did.json  legal-person-0aa6d7ea-27ef-416f-abf8-9cb634884e66.did.json  legal-person-altme_sas.did.json  legal-person-bmw_ag.did.json  natural-person-550e8400-e29b-41d4-a716-446655440000.did.json
examples/gaiax/: README.md  delegated-signing-receipt.json  gx-legal-person.json  gx-registration-number.json  gx-terms-and-conditions.json  legal-person-credential-bmw.json  legal-person-credential-embedded.json  legal-person-credential.json  natural-person-credential-andreas.json  natural-person-credential-max.json  natural-person-credential.json  participant-vp.json  trust-anchor-credential.json
examples/gaiax_external/: Gaia-X_Loire Participant Credential VC_(2026)_signed.json  Gaia-X_Loire Participant Credential VC_(2026)_signed.jwt  Gaia-X_Loire Participant Credential VP_(2026).json  Gaia-X_Loire Participant Credential VP_(2026)_signed.jwt  README.md
js/: package-lock.json  package.json  tsconfig.json
js/src/: index.ts  signer.ts  verifier.ts  x509.ts
js/tests/: keys.test.ts  sd-jwt.test.ts  sign.test.ts  tamper.test.ts  verify.test.ts
linkml/: core.yaml  gaiax-domain.yaml  harbour-core-credential.yaml  harbour-core-delegation.yaml  harbour-gx-credential.yaml  harbour.yaml  importmap.json  w3c-vc.yaml
scripts/: fix_jsonld_context.py
src/harbour/jose/: __init__.py  kb_jwt.py  keys.py  sd_jwt.py  sd_jwt_verifier.py  signer.py  verifier.py  x509.py
src/python/credentials/: __init__.py  claim_mapping.py  digest_sri_examples.py  example_signer.py  linkml_generator.py  verify_signed_examples.py
src/python/harbour/: __init__.py  _crypto.py  delegation.py  digest_sri.py  generate_artifacts.py  kb_jwt.py  keys.py  sd_jwt.py  sd_jwt_vp.py  signer.py  verifier.py  x509.py
src/typescript/harbour/: delegation.ts  digest-sri.ts  index.ts  kb-jwt.ts  keys.ts  package-lock.json  package.json  sd-jwt-vp.ts  sd-jwt.ts  signer.ts  story-digests.ts  story-sign.ts  story-verify.ts  x509.ts  (+3 more)
tests/: README.md  conftest.py  test_interop.py  test_kb_jwt.py  test_keys.py  test_sd_jwt.py  test_sign.py  test_sign_legacy.py  test_tamper.py  test_tamper_legacy.py  test_verify.py  test_verify_legacy.py  test_x509.py
tests/fixtures/: canonicalization-vectors.json  sample-vc.json  signed-vc-p256.jwt  test-keypair-p256.json  test-keypair.json
tests/interop/: test_cross_runtime.py
tests/validation-probe/: ontology-loading-probe.json
(+38 files in other folders)
